Evas_Object* is a ref'ed structure, so tread it as such https://bugs.webkit.org/show_bug.cgi?id=96659

Reviewed by Adam Barth.

Source/WebCore:

Replace OwnPtr<Evas_Object> with RefPtr.

* PlatformEfl.cmake:
* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::ThemePartCacheEntry::create):
(WebCore::RenderThemeEfl::loadTheme):
(WebCore::RenderThemeEfl::applyPartDescriptionsFrom):
* platform/efl/RenderThemeEfl.h:
(RenderThemeEfl):
(ThemePartCacheEntry):

Source/WebKit/efl:

Replace OwnPtr<Evas_Object> with RefPtr.

* tests/UnitTestUtils/EWKTestView.cpp:
(EWKUnitTests::EWKTestView::init):
* tests/UnitTestUtils/EWKTestView.h:
(EWKTestView):

Source/WTF:

Remove OwnPtr support for Evas_Object* and add support for it
with RefPtr instead (the latter moved from WebCore).

* wtf/PlatformEfl.cmake:
* wtf/efl/OwnPtrEfl.cpp:
* wtf/efl/RefPtrEfl.cpp: Renamed from Source/WebCore/platform/efl/RefPtrEfl.cpp.
(WTF):
(WTF::refIfNotNull):
(WTF::derefIfNotNull):
* wtf/efl/RefPtrEfl.h: Renamed from Source/WebCore/platform/efl/RefPtrEfl.h.
(WTF):

Tools:

Replace OwnPtr<Evas_Object> with RefPtr.

* DumpRenderTree/efl/ImageDiff.cpp:
(calculateDifference):
(printImageDifferences):
(readImageFromStdin):
(main):

git-svn-id: svn://svn.chromium.org/blink/trunk@128507 bbb929c8-8fbe-4397-9dbb-9b2b20218538