Source/WTF/wtf/efl/RefPtrEfl.cpp
@@ -1,5 +1,6 @@
 /*
  *  Copyright (C) 2011 Samsung Electronics
+ *  Copyright (C) 2012 Intel Corporation. All rights reserved.
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
@@ -31,9 +32,16 @@ template<> void refIfNotNull(Evas_Object* ptr)
 
 template<> void derefIfNotNull(Evas_Object* ptr)
 {
+    // Refcounting in Evas_Object is different that normal. The object is created
+    // with an external ref count of 0, but with one internal count of 1 which can
+    // only be removed by calling _del. Calling _del with an external ref count > 0,
+    // postposes deletion until it reaches 0.
+
     if (LIKELY(!!ptr)) {
-        evas_object_unref(ptr);
-        evas_object_del(ptr);
+        if (evas_object_ref_get(ptr) > 0)
+            evas_object_unref(ptr);
+        else
+            evas_object_del(ptr);
     }
 }
 
