third_party/WebKit/Source/WebCore/platform/efl/RenderThemeEfl.h
@@ -37,6 +37,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "RenderTheme.h"
 
 #include <cairo.h>
+#include <wtf/efl/RefPtrEfl.h>
 
 typedef struct _Ecore_Evas Ecore_Evas;
 typedef struct _Evas_Object Evas_Object;
@@ -251,7 +252,7 @@ private:
     String m_themePath;
     // Order so that the canvas gets destroyed at last.
     OwnPtr<Ecore_Evas> m_canvas;
-    OwnPtr<Evas_Object> m_edje;
+    RefPtr<Evas_Object> m_edje;
 
     struct ThemePartDesc {
         FormType type;
@@ -276,7 +277,7 @@ private:
     private:
         // Order so that the canvas gets destroyed at last.
         OwnPtr<Ecore_Evas> m_canvas;
-        OwnPtr<Evas_Object> m_edje;
+        RefPtr<Evas_Object> m_edje;
         RefPtr<cairo_surface_t> m_surface;
     };
 
