third_party/WebKit/Source/WTF/wtf/PlatformEfl.cmake
@@ -2,6 +2,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 LIST(APPEND WTF_SOURCES
     efl/MainThreadEfl.cpp
     efl/OwnPtrEfl.cpp
+    efl/RefPtrEfl.cpp
     gobject/GOwnPtr.cpp
     gobject/GRefPtr.cpp
 
@@ -34,5 +35,6 @@ LIST(APPEND WTF_INCLUDE_DIRECTORIES
     ${GLIB_INCLUDE_DIRS}
     ${ICU_INCLUDE_DIRS}
     ${JAVASCRIPTCORE_DIR}/wtf/gobject
-    ${JAVASCRIPTCORE_DIR}/wtf/unicode/
+    ${JAVASCRIPTCORE_DIR}/wtf/unicode
+    ${JAVASCRIPTCORE_DIR}/wtf/efl
 )
