third_party/WebKit/Source/WebKit/efl/tests/UnitTestUtils/EWKTestView.cpp
@@ -24,6 +24,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <EWebKit.h>
 
 #include <wtf/PassOwnPtr.h>
+#include <wtf/RefPtr.h>
 
 namespace EWKUnitTests {
 
@@ -99,11 +100,11 @@ bool EWKTestView::init()
 
     switch (m_defaultViewType) {
     case SingleView:
-        m_webView = adoptPtr(ewk_view_single_add(m_evas));
+        m_webView = adoptRef(ewk_view_single_add(m_evas));
         break;
 
     case TiledView:
-        m_webView = adoptPtr(ewk_view_tiled_add(m_evas));
+        m_webView = adoptRef(ewk_view_tiled_add(m_evas));
         break;
     }
 
